objects/PS_to_Sales_Mapping__c.object
<CustomObject>
    <description>Mapping object to relate the PS Groups and business units to the Sales Groups and regions, and also additional information that is used in other areas that depends on these mappings (such as PS SMART DSR targets)</description>
    <fields>
        <fullName>AE_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PS_to_Sales_Mappings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSR_DeploymentType__c</fullName>
        <description>Professional Services Deployment Type</description>
        <label>DSR DeploymentType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PureEngage Premise</fullName>
                    <default>true</default>
                    <label>PureEngage Premise</label>
                </value>
                <value>
                    <fullName>PureEngage Cloud</fullName>
                </value>
                <value>
                    <fullName>Outbound Engagement</fullName>
                </value>
                <value>
                    <fullName>Premier Edition</fullName>
                </value>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>PureConnect</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the mapping is active or not (which would mean it was preserved for historical lookups)</description>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Regional_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this specific row is for regional mapping only and would not be used for sub-regional / business unit lookups (i.e. North America only)</description>
        <label>Is Regional Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mapped_CSD_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mapped CSD Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PS_to_Sales_Mappings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PS_Business_Unit_Sub_Region__c</fullName>
        <description>Professional Services Business Units</description>
        <label>PS Business Unit (Sub Region)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PS_Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Andean</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>BU Angel</fullName>
                </value>
                <value>
                    <fullName>BU Canada</fullName>
                </value>
                <value>
                    <fullName>BU CEE</fullName>
                </value>
                <value>
                    <fullName>BU Central</fullName>
                </value>
                <value>
                    <fullName>BU DACH</fullName>
                </value>
                <value>
                    <fullName>BU East</fullName>
                </value>
                <value>
                    <fullName>BU Global</fullName>
                </value>
                <value>
                    <fullName>BU Government</fullName>
                </value>
                <value>
                    <fullName>BU Iberia</fullName>
                </value>
                <value>
                    <fullName>BU Italy</fullName>
                </value>
                <value>
                    <fullName>BU ME</fullName>
                </value>
                <value>
                    <fullName>BU North</fullName>
                </value>
                <value>
                    <fullName>BU SA</fullName>
                </value>
                <value>
                    <fullName>BU SEI</fullName>
                </value>
                <value>
                    <fullName>BU Speechstorm EMEA</fullName>
                </value>
                <value>
                    <fullName>BU Strategic</fullName>
                </value>
                <value>
                    <fullName>BU UKI</fullName>
                </value>
                <value>
                    <fullName>BU West</fullName>
                </value>
                <value>
                    <fullName>BY France &amp; NA</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>CEE</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>CU Asean and EMG</fullName>
                </value>
                <value>
                    <fullName>CU AUS and NZ</fullName>
                </value>
                <value>
                    <fullName>CU China</fullName>
                </value>
                <value>
                    <fullName>CU India</fullName>
                </value>
                <value>
                    <fullName>CU Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PS_DSR_Email_Group_Target__c</fullName>
        <description>Email group target or set of users who would be the recipients of the PS DSR submitted email for review purposes</description>
        <label>PS DSR Email Group Target</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PS_DSR_Email_Target_Email_Address__c</fullName>
        <description>The email address of the related user who is the PS DSR Target recipient</description>
        <label>PS DSR Email Target - Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PS_DSR_Email_Target_Username__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The reference to the user who is the designated target for the PS DSR based on the regional PS to Sales mappings</description>
        <label>PS DSR Email Target Username</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PS_to_Sales_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PS_Is_Use_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the mapping is used in relation to a PS use case or otherwise</description>
        <label>PS Is Use Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS_Region__c</fullName>
        <description>The main PS Regional and division splits used by the Professional Services Organisation</description>
        <label>PS Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>Cloud Client Services</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Enterprise Cloud PS</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>WW Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Routing_Type__c</fullName>
        <label>Routing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group routing</fullName>
                </value>
                <value>
                    <fullName>CSD Assignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <description>Main Sales Regions</description>
        <label>Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Segment__c</fullName>
        <label>Sales Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Mid-Market</fullName>
                </value>
                <value>
                    <fullName>Velocity</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Sub_Region__c</fullName>
        <label>Sales Sub Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>North East</fullName>
                </value>
                <value>
                    <fullName>South East</fullName>
                </value>
                <value>
                    <fullName>Velocity</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Channels</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Southern Cone</fullName>
                </value>
                <value>
                    <fullName>Andean</fullName>
                </value>
                <value>
                    <fullName>Benelux</fullName>
                </value>
                <value>
                    <fullName>ECSEEI</fullName>
                </value>
                <value>
                    <fullName>DACH</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Iberia</fullName>
                </value>
                <value>
                    <fullName>Italy &amp; Middle East</fullName>
                </value>
                <value>
                    <fullName>Nordics</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>UKI</fullName>
                </value>
                <value>
                    <fullName>Eastern Europe</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>South East Asia</fullName>
                </value>
                <value>
                    <fullName>South Korea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PS to Sales Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PS_Region__c</columns>
        <columns>PS_Business_Unit_Sub_Region__c</columns>
        <columns>DSR_DeploymentType__c</columns>
        <columns>Sales_Region__c</columns>
        <columns>PS_DSR_Email_Target_Username__c</columns>
        <columns>PS_DSR_Email_Group_Target__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Routing_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CSD_Assignment_PS_to_Sales_Mappings</fullName>
        <columns>NAME</columns>
        <columns>DSR_DeploymentType__c</columns>
        <columns>Sales_Region__c</columns>
        <columns>Is_Active__c</columns>
        <columns>AE_Name__c</columns>
        <columns>Mapped_CSD_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Routing_Type__c</field>
            <operation>equals</operation>
            <value>CSD Assignment</value>
        </filters>
        <label>CSD Assignment PS to Sales Mappings</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PSSM-{00000}</displayFormat>
        <label>PS to Sales Mapping Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PS to Sales Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>